tooling/nargo_cli/tests/snapshots/expand/compile_success_empty/comptime_type/execute__tests__nargo_expand_compile-57.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
use std::meta::type_of;

struct Foo<T> {
    x: T,
}

trait SomeTrait<T> {}

pub struct StructImplementsSomeTrait {}

impl SomeTrait<i32> for StructImplementsSomeTrait {}

pub struct StructDoesNotImplementSomeTrait {}

trait Serialize<let N: u32> {}

impl Serialize<1> for Field {}

impl<let N: u32, let M: u32, T> Serialize<N * M> for [T; N]
where
    T: Serialize<M>,
{}

impl<let N: u32, U, T, let M: u32> Serialize<N + M> for (T, U)
where
    T: Serialize<N>,
    U: Serialize<M>,
{}

fn main() {
    ()
}

pub fn function_with_where<T>(_x: T)
where
    T: SomeTrait<i32>,
{
    ()
}
